--- a/ucom/DESCRIPTION
+++ b/ucom/DESCRIPTION
@@ -6,7 +6,20 @@ Authors@R:
            family = "Huang",
            role = c("aut", "cre"),
            email = "bin.huangxb@gmail.com")
-Description: Utility functions for cleaning data in the UCOM project
+Description: Utility functions for cleaning data in the UCOM project.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 3.0.2)
+Suggests: 
+    testthat
+Imports: 
+    assertthat,
+    dplyr,
+    stringr,
+    readr,
+    fs,
+    here,
+    rprojroot
+RoxygenNote: 6.1.1
