--- a/ucom/NAMESPACE
+++ b/ucom/NAMESPACE
@@ -9,6 +9,7 @@ export(get_country_code)
 export(get_current_site)
 export(get_num_vars)
 export(get_raw_data)
+export(read_cleaned_data)
 export(remove)
 export(remove_gen)
 export(remove_text)
