--- a/ucom/NAMESPACE
+++ b/ucom/NAMESPACE
@@ -4,6 +4,8 @@ export("%>%")
 export(check_vars)
 export(convert_choiceDF)
 export(convert_spss)
+export(convert_start_end)
+export(convert_time)
 export(create_country_and_site)
 export(create_src_folders)
 export(diagnose)
@@ -11,6 +13,7 @@ export(get_country_code)
 export(get_current_site)
 export(get_num_vars)
 export(get_raw_data)
+export(get_rel_path)
 export(read_cleaned_data)
 export(remove)
 export(remove_gen)
