--- a/ucom/NAMESPACE
+++ b/ucom/NAMESPACE
@@ -11,9 +11,11 @@ export(create_src_folders)
 export(diagnose)
 export(get_country_code)
 export(get_current_site)
+export(get_exc_vars)
 export(get_num_vars)
 export(get_raw_data)
 export(get_rel_path)
+export(get_summary)
 export(read_cleaned_data)
 export(remove)
 export(remove_gen)
