Add helper functions to quickly identify mismatching columns

--- a/ucom/NAMESPACE
+++ b/ucom/NAMESPACE
@@ -15,6 +15,7 @@ export(get_country_code)
 export(get_current_site)
 export(get_exc_vars)
 export(get_num_vars)
+export(get_problem_cols)
 export(get_raw_data)
 export(get_rel_path)
 export(get_summary)
