Fix bugs & pin exact dependency versions

--- a/ucom/NAMESPACE
+++ b/ucom/NAMESPACE
@@ -24,6 +24,7 @@ export(read_cleaned_data)
 export(remove)
 export(remove_gen)
 export(remove_text)
+export(rename_uni_vars)
 export(write_results)
 export(write_vars_rds)
 importFrom(magrittr,"%>%")
