--- a/ucom/DESCRIPTION
+++ b/ucom/DESCRIPTION
@@ -12,21 +12,21 @@ Encoding: UTF-8
 LazyData: true
 Depends: 
     R (>= 3.0.2)
-Suggests: 
-    testthat
 Imports: 
-    assertthat,
-    dplyr,
-    stringr,
-    readr,
-    fs,
-    here,
-    rprojroot,
-    magrittr,
-    purrr,
-    haven,
-    lubridate,
-    rlang,
-    tibble,
-    glue
+    assertthat (== 0.2.1),
+    dplyr (== 0.8.5),
+    stringr (== 1.4.0),
+    readr (== 1.3.1),
+    fs (== 1.3.2),
+    here (== 0.1),
+    rprojroot (== 1.3.2),
+    magrittr (== 1.5),
+    purrr (== 0.3.3),
+    haven (== 2.2.0),
+    lubridate (== 1.7.4),
+    rlang (== 0.4.5),
+    tibble (== 2.1.3),
+    glue (== 1.3.2),
+Suggests: 
+    testthat (== 2.1.1)
 RoxygenNote: 6.1.1
